News
====

0.2
---

* Add ``hashable`` parameter.

0.1
---

* Initial release